--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -2,10 +2,13 @@
 @import "./animated.scss";
 @import "./var.scss";
 @import "./modules.scss";
+@import "./arena.scss";
+@import "./editor.scss";
+@import "./list.scss";
+@import "./fileupload.scss";
+@import "./modal.scss";
 
-
-
-#_plekan{
+#plekan{
   position: fixed;
   width: 100%;
   height: 100%;
@@ -19,7 +22,7 @@
       outline: 1px dotted $primaryColor;
     }
   }
-  select{
+  select.plekan-form-control{
     display: inline-block;
     float: left;
     height: 34px;
@@ -38,607 +41,6 @@
   }
 }
 /*------------------------------------------*/
-
-._plekan_arena{
-  // -----------------------------------
-  padding-top: 100px;
-  .plekan-change-language{
-    width: 100%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    margin-bottom: 100px;
-    padding: 20px 0;
-    min-height: 74px;
-    background-color: #fff;
-    z-index: 11;
-    border-bottom: 1px solid $borderColorLight;
-    box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
-    span{
-      float: left;
-      margin-right: 10px;
-      margin-top: 6px;
-    }
-    .open-translate-arena{
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      margin-top: -25px;
-      margin-left: -25px;
-      text-align: center;
-      button{
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        border:1px solid $borderColorLight;
-        background-color: #fff;
-        outline: thick;
-        font-size: 20px;
-        color: $textColorDark;
-        i{
-        }
-      }
-    }
-  }
-  // -----------------------------------
-  .translate-mode{
-    width: 100%!important;
-    padding-left: 100px;
-    .translate-mode-column{
-      width: 50%;
-      float: left;
-      padding: 10px;
-    }
-  }
-  // 
-  .plekan-row-list{
-    padding: 10px;
-    span.sortable-chosen,span.sortable-ghost{
-      display: block;
-      width: 100%;
-      height: 40px;
-      background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
-      background-size: 800% 800%;
-      animation: gradiendAnimation 30s ease infinite;
-      margin: 10px 0;
-      *{
-        display: none;
-        text-indent: -99999999px;
-      }
-    }
-
-    &.empty{
-      position: relative;
-      padding: 40px;
-      text-align: center;
-      background-color: #ccc;
-      background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
-      background-size: 800% 800%;
-      animation: gradiendAnimation 30s ease infinite;
-      border-radius: 5px;
-      &:after{
-        content: "Preview Arena";
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        text-align: center;
-        font-size: 25px;
-        color: #FFF;
-        font-weight: 100;
-      }
-      span.sortable-chosen,span.sortable-ghost{
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        margin: 0;
-        background-color: transparent!important;
-        outline: 3px dotted $primaryColor;
-        z-index: 12;
-      }
-      &.translate{
-        &:after{
-          content: "Translate";
-        }
-      }
-    }
- 
-    .plekan-row-item{
-      position: relative;
-      margin-bottom: 10px;
-      clear: both;
-      margin: 40px 0;
-      &:after,&:before{
-        content: "";
-        float: none;
-        clear: both;
-        display: table;
-      }
-      // background-color: #ccc;
-      &:hover{
-        .plekan-tools{
-          display: block;
-        }
-      }
-      .plekan-tools{
-        position: absolute;
-        width: 48px;
-        left: -48px;
-        display: none;
-        top: -0px;
-        // background-color: rgba(107, 105,164,.8);
-        overflow: hidden;
-        span{
-          display: block;
-          color: $textColorLight;
-          width: 40px;
-          height: 40px;
-          text-align: center;
-          line-height: 40px;
-          margin-right: 10px;
-          font-size: 16px;
-          background-color: $primaryColor;
-          cursor: pointer;
-          &:hover{
-            opacity: .9;
-          }
-        }
-      }
-    }
-  }
-  .plekan-footer{
-    margin-top: 20px;
-  }
-}
-/*------------------------------------------*/
-.editor-arena{
-  .editor{
-      ul {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        z-index: 9;
-        position: fixed;
-        border-radius: 24px;
-        li {
-          clear: left;
-          a {
-            display: block;
-            overflow: hidden;
-            float: left;
-            width: 50px;
-            height: 50px;
-            line-height: 50px;
-            text-align: center;
-            color: #fff;
-            font-weight: bold;
-            position: relative;
-            background-color: #262625;
-            &.active{
-              background-color: #444;
-            }
-          }
-          ul{
-            list-style-type: none; 
-            float: left;
-            display: none;
-            padding: 0;
-            margin-left: 0px;
-            border-bottom: 0;
-            margin-top: 0px;
-            padding-left: 50px;
-            z-index: -1;
-            animation-duration: .2s!important;
-            animation-name: fadeInLeft;
-            
-            &:before{
-              content: "";
-              width: 50px;
-              height: 50px;
-              position: absolute;
-              left: 0;
-              top: 0;
-              border: 1px solid #fff!important;
-              border-radius: 24px;
-            }
-            li{
-              display: inline; 
-              clear: none !important;
-            }
-          }
-          &:hover{
-            ul{
-              display: block;
-            }
-          }
-        }
-        &.dynamic-editor{
-          position: fixed;
-          top: 100px;
-          left: 100px;
-          transform: scale(0);
-          border-right: 0 ;
-          &.active{
-            transform: scale(1);
-            transition: all .2s;
-          }
-          li{
-            display: inline;
-            clear: left!important;
-            &.create-link{
-              position: absolute;
-              width: 100%;
-              height: 100%;
-              background: inherit;
-              top: 0;
-              left: 0;
-              padding-right: 39px;
-              display: none;
-              border-radius: 24px;
-              overflow: hidden;
-              background-color: #262625;
-              &.active{
-                display: block;
-              }
-              input{
-                width: 100%;
-                height: 100%;
-                padding-left: 10px;
-                background: inherit;
-                border:0;
-                color: #FFF;
-              }
-              button{
-                position: absolute;
-                right: 0;
-                top: 0;
-                height: 100%;
-                width: 40px;
-                border:0;
-                background: inherit;
-                color: #ccc;
-                &:before{
-                  content: "";
-                  width: 1px;
-                  height: 20px;
-                  position: absolute;
-                  left: 0;
-                  top: 50%;
-                  margin-top: -10px;
-                  background-color: #ccc;
-                }
-              }
-            }
-          }
-        }
-        &.stable-editor{
-          top: 120px;
-          left: 20px;
-          animation-name: fadeOutLeft;
-          animation-duration: .0s!important;
-          border-bottom: 0;
-          
-          &.active{
-            animation-duration: .2s!important;
-            animation-name: fadeInLeft;
-          }
-        }
-      }
-
-  }
-  .editable-elements-button{
-    position: absolute;
-    left: 0;
-    top: 0;
-    border:0;
-    background-color: $primaryColor;
-    z-index: 11;
-    color: #FFF;
-    padding: 10px 20px;
-    visibility: hidden;
-  }
-  .editable-element-fields-container{
-    .editable-element-fields{
-      padding: 4px 0;
-      position: relative;
-      padding-left: 120px;
-      span{
-        width: 100px;
-        display: inline-block;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translate(0,-50%);
-      }
-      input{
-        width: 100%;
-        height: 32px;
-        padding-left: 10px;
-        outline: thick;
-      }
-    }
-  }
-  
-  // .icon-header-one,
-  // .icon-header-two,
-  // .icon-header-three,
-  // .icon-header-four,
-  // .icon-header-five,
-  // .icon-header-six{
-  //   &:after{
-  //   }
-  // }
-
-  .icon-header-one{
-    &:after{
-      content: 'H1';
-    }
-  }
-  .icon-header-two{
-    &:after{
-      content: 'H2';
-    }
-  }
-  .icon-header-three{
-    &:after{
-      content: 'H3';
-    }
-  }
-  .icon-header-four{
-    &:after{
-      content: 'H4';
-    }
-  }
-  .icon-header-five{
-    &:after{
-      content: 'H5';
-    }
-  }
-  .icon-header-six{
-    &:after{
-      content: 'H6';
-    }
-  }
-}
-/* ------------------------------------- */
- ._plekan_list{
-   position: fixed;
-   width: 200px;
-   height: 100%;
-   background-color: #f2f2f2;
-   right: 0;
-   padding: 10px;
-   top: 0; 
-   border-left: 1px solid $borderColorLight;
-   transition: all .3s;
-   z-index: 12;
-   box-shadow: 0px 3px 78px 0px rgba(0,0,0,0.1);
-   ._plekan_list_title{
-     text-align: center;
-     background-color: transparent;
-     border-bottom: 1px solid $borderColorLight;
-     padding-bottom: 15px;
-     display: inline-block;
-   }
-   .openModuleList{
-      width: 40px;
-      height: 40px;
-      font-size: 14px;
-      border:0;
-      background-color: #f2f2f2;
-      font-size: 20px;
-      position: absolute;
-      left: -40px;
-      top: 80px;
-      border: 1px solid $borderColorLight;
-      border-right: 0 ;
-    }
-   span{
-     display: block;
-     width: 100%;
-     background-color: #fff;
-     padding: 5px;
-     float: none;
-     cursor: pointer;
-     margin-bottom: 10px;
-     img{
-       width: 100%;
-     }
-   }
-   &.active{
-    right: 0;
-   }
-   &.deactive{
-    right: -200px;
-    .openModuleList{
-      i{
-        transform: rotate(-180deg);
-      }
-    }
-   }
-}
-
-/*------------------------------------------*/
-.plekan-modal{
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.4);
-  z-index: 14;
-  overflow: auto;
-  top: 0;
-  left: 0;
-
-  .modal-arena-layout{
-    position: absolute;
-    max-width: 700px;
-    width: 100%;
-    min-height: 300px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    padding: 10px;
-    .modal-arena{
-      background-color: #fff;
-      width: 100%;
-      padding: 20px;
-      box-shadow: 0px 0px 63px 3px rgba(0,0,0,0.75);
-      position: relative;
-      header{
-        border:0;
-        .title{
-          font-size: 20px;
-          color: $primaryColor;
-          margin-bottom: 10px;
-          border-bottom: 1px solid $primaryColor;
-        }
-      }
-      footer{
-        margin-top: 15px;
-        text-align: right;
-        button{
-          float: right;
-          padding: 10px 20px;
-          border:0;
-          background-color: $primaryColor;
-          color: #FFF;
-          margin-left: 10px;
-        }
-      }
-
-      .plekan-modal-close{
-        position: absolute;
-        right: -15px;
-        top: -15px;
-        width: 30px;
-        height: 30px;
-        text-align: center;
-        line-height: 30px;
-        background-color: #222;
-        border-radius: 50%;
-        &:before,&:after{
-          content: "";
-          position: absolute;
-          width: 20px;
-          height: 20px;
-          top: 50%;
-          margin-top: -10px;
-          width: 1px;
-          background-color: #fff;
-          transform: rotate(45deg);
-        }
-        &:after{
-          transform: rotate(-45deg);
-        }
-      }
-    
-    }
-  }
-}
-
-.file-upload-area{
-  width: 100%;
-  margin-top: 20px;
-  position: relative;
-  label{
-    width: 100%;
-    display: inline-block;
-    min-height: 200px;
-    outline: 1px solid $primaryColor;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    background-color: rgba(0,0,0,.4);
-    &.empty{
-      &:after{
-        content: "";
-        background: linear-gradient(270deg, $primaryColor, #3f702d, #76b91a, #3e5b6e);
-        background-size: 800% 800%;
-        animation: gradiendAnimation 30s ease infinite;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-      &:before{
-        content: "Click or Drag";
-        position: absolute;
-        width: 100%;
-        top: 50%;
-        left: 0;
-        transform: translate(0%,-50%);
-        z-index: 2;
-        color: #FFF;
-        font-size: 20px;
-        font-weight: 100;
-        letter-spacing: 4px;
-      }
-    }
-  }
-  input[type="file"]{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    z-index: 4;
-  }
-}
-.edit-modal{
-  .plekan-edit-as-html-modal-body{
-    textarea{
-      width: 100%;
-      min-height: 300px;
-      max-height: 400px;
-      resize: none;
-      outline: #FFF;
-      border:0;
-      background-color: #f2f2f2;
-      padding: 10px;
-    }
-  }
-}
-
-.modal-color-body{
-  .plekan-color-type{
-    clear: both;
-    margin-bottom: 10px;
-    position: relative;
-    padding-right: 34px;
-    select{
-      width: 100%;
-    }
-    .remove-color{
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 34px;
-      height: 34px;
-      text-align: center;
-      line-height: 34px;
-      padding: 0;
-      color: #444;
-    }
-  }
-  a{
-    width: 10%;
-    padding: 14px;
-    display: inline-block;
-    float: left;
-    border: 1px solid #fff;
-    cursor: pointer;
-  }
-}
-
 .plekan-footer-button{
   float: right;
   display: inline-block;
@@ -664,9 +66,7 @@
     background-color: #4EA81E;
   }
 }
-
 /*------------------------------------------*/
-
 pre {
   white-space: pre-wrap;       /* Since CSS 2.1 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
@@ -674,51 +74,3 @@ pre {
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
-
-@keyframes gradiendAnimation { 
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-
-@keyframes fadeInLeftCC {
-  from {
-    opacity: 0;
-    -webkit-transform: translate(-60%,-50%);
-    transform: translate(-60%,-50%);
-  }
-
-  to {
-    opacity: 1;
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-  }
-}
-
-.fadeInLeftCC {
-  -webkit-animation-name: fadeInLeftCC;
-  animation-name: fadeInLeftCC;
-}
-
-@keyframes fadeOutLeftCC {
-  from {
-    opacity: 1;
-     -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-  }
-
-  to {
-    opacity: 0;
-    -webkit-transform: translate(-60%,-50%);
-    transform: translate(-60%,-50%);
-  }
-}
-
-.fadeOutLeftCC {
-  -webkit-animation-name: fadeOutLeftCC;
-  animation-name: fadeOutLeftCC;
-}
-
-
-
-
