--- a/src/plekan/assets/style/animated.scss
+++ b/src/plekan/assets/style/animated.scss
@@ -20,6 +20,12 @@
 .custom-classes-transition{
   animation-duration: .4s!important;
 }
+.transition-list{
+  animation-duration: .5s!important;
+}
+.transition-component{
+  animation-duration: .2s!important;
+}
 
 .custom-classes-transition-child{
   animation-duration: .7s!important;
