--- a/src/plekan/assets/style/arena.scss
+++ b/src/plekan/assets/style/arena.scss
@@ -140,11 +140,13 @@
           width: 40px;
           height: 40px;
           text-align: center;
-          line-height: 40px;
           margin-right: 10px;
           font-size: 16px;
           background-color: $primaryColor;
           cursor: pointer;
+          i{
+            line-height: 40px;
+          }
           &:hover{
             opacity: .9;
           }
